--- a/website/PCD-website-2020/CMS/public/docs/css/screen.css
+++ b/website/PCD-website-2020/CMS/public/docs/css/screen.css
@@ -1,16 +1,296 @@
+/* CUSTOM */
+#defaultCanvas0{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.credits {
+  font-size: 0.8rem;
+  display: inline;
+  text-align: center;
+}
+
+
+p {
+  font-size: 16px;
+}
+
+.withfilter{
+  filter: grayscale(1);
+}
+
+.withfilter:hover {
+  filter: none;
+}
+
+hr.dotted {
+  border-top: 1px dotted #6C00B3;
+  visibility: visible;
+}
+
+.reg {
+  float: right;
+}
+
+.sch {
+  min-height: 420px;
+}
+
+.reg p {
+  font-size: 14px;
+}
+
+#container {
+  min-height: 42px;
+  max-width: 820px;
+}
+
+
+.logo-text{
+  padding:0;
+  font-size: 44px;
+  padding-top: 50px;
+  padding-left: 120px;
+  color: #6C00B3;
+  z-index: 0;
+}
+
+.hero-image {
+  margin: 0px auto;
+  padding: 5px 20px;
+  text-align: left;
+  max-width: 820px;
+  width: 100%;
+  height: 20%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  color: white;
+  width: 100%;
+  bottom: 0;
+}
+
+.venue-image {
+  margin: 0px auto;
+  padding: 5px 20px;
+  text-align: left;
+  float: left;
+  margin-left: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  max-height: 340px;
+}
+
+.itsday_title{
+  color: #6C00B3;
+  filter: grayscale(1);
+}
+
+.mobilespacing{
+  display: none;
+}
+
+button {
+  border: none;
+  border-radius: 12px;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: white;
+  background-color: #6C00B3;
+  text-align: center;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #8933c2;
+  color: white;
+}
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  cursor: default;
+}
+
+.alert-box {
+  background-color: #fffbcc;
+  color: #444;
+  font-size: 14px;
+  line-height: 23px;
+  padding: 14px 16px;
+}
+
+.badge {
+  border-radius: 2px;
+  color: #000;
+  margin-left: 4px;
+  padding: 3px 5px 3px 4px;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: none;
+  padding: 10px;
+}
+
+
+.subheader{
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  align-items:center;
+}
+
+.maincontent{
+  margin: 0px auto;
+  padding: 5px 20px;
+  text-align: left;
+  max-width: 820px;
+  background: white;
+}
+
+.opencall {
+  width: auto;
+}
+
+.opencall .col {
+  margin: 0px 0px 0px 20px;
+}
+
+.theme {
+  width: 60%;
+}
+
+.theme span {
+    padding: 0 10px;
+    float: none;
+}
+
+@media (max-width: 576px){
+  .hero-image {
+    padding: 0px;
+  }
+
+  .maincontent{
+    margin-bottom: 200px;
+  }
+
+  #share-buttons-container {
+    padding-bottom: 100px;
+  }
+
+
+  .mobilespacing{
+    display: block;
+  }
+
+  .reg {
+    float: left;
+    margin-top: 20px;
+  }
+
+  .venue-image{
+    padding: 0px;
+    width: 100%;
+  }
+
+  .eight {
+    width: 100%;
+  }
+
+  .opencall{
+    width: 100%;
+  }
+
+  .opencall .col{
+    float: none;
+    padding-top: 100px;
+    margin: auto;
+  }
+
+  .sch {
+    width: 100%;
+    margin: 0px 50px 0px 0px;
+  }
+
+  .theme span {
+    text-align: left;
+    float: left;
+  }
+}
+
+@media (max-width: 780px){
+  .hero-image {
+    padding: 0px;
+  }
+
+
+  .reg {
+    float: left;
+    margin-top: 20px;
+  }
+
+  .venue-image{
+    padding: 0px;
+    width: 95%;
+  }
+
+  .eight {
+    width: 100%;
+  }
+
+  .opencall{
+    width: 100%;
+  }
+
+  .opencall .col{
+    padding-top: 100px;
+  }
+
+  .sch {
+    width: 340px;
+  }
+
+  .theme {
+    width: 80%;
+  }
+
+  .theme span {
+    padding: 0 10px;
+    float: none;
+  }
+}
+
+
 /* Colours */
 
-body, a { color: #222; }
+a { color: #6C00B3; }
 em, em a, strong, p.date, div#project-navigation p { color: #999; }
 h2 a { border-bottom: 2px solid #999; }
-a { border-bottom: 1px solid #999; }
+a { border-bottom: 1px solid #6C00B3; }
 
 /* Typography */
 body { line-height: 1.3; }
-ul li, p, em, div.description { font-size: 13px; font-style: normal; }
+ul li, p, em, div.description { font-size: 14px; font-style: normal; }
 h1 { font-weight: normal; }
 h1 strong { font-weight: normal; text-transform: none; display: block; letter-spacing: 0px; }
-h2 {  margin: 0px; font-weight: normal; letter-spacing: 0.02em; }
+h2 {  font-weight: normal; letter-spacing: 0.02em;  margin-block-start: 0.67em; margin-block-end: 0.67em; margin-inline-start: 0px; margin-inline-end: 0px;}
 p.date { font-size: 11px; letter-spacing: 0.03em; }
 a { text-decoration: none; }
 p#project-count, p#gallery-count { text-align: right; }
