--- a/website/PCD-website-2020/CMS/templates/default.html
+++ b/website/PCD-website-2020/CMS/templates/default.html
@@ -17,24 +17,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/p5@0.5.16/lib/p5.min.js" type="text/javascript"></script>
     <style type="text/css">
-
-      #defaultCanvas0{
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-
-      .credits {
-        font-size: 0.8rem;
-        display: inline;
-        text-align: center;
-      }
-
       @font-face {
         font-family: 'Avenir';
         src: url("public/fonts/AvenirLTStd-Book.woff") format("woff"), url("public/fonts/AvenirLTStd-Book.ttf")  format("truetype");
       }
+
 
       body, html {
         height: 100%;
@@ -42,46 +29,13 @@
         font-family: 'Avenir', serif;
       }
 
-      p {
-        font-size: 16px;
-      }
-
-      .withfilter{
-        filter: grayscale(1);
-      }
-
-      .withfilter:hover {
-        filter: none;
-      }
-
-      hr.dotted {
-        border-top: 1px dotted #6C00B3;
-        visibility: visible;
-      }
-
-      .reg {
-        float: right;
-      }
-
-      .sch {
-        min-height: 420px;
-      }
-
-      .reg p {
-        font-size: 13px;
-      }
-
-      #container {
-        min-height: 42px;
-        max-width: 820px;
-      }
 
       .logo-image {
         margin: 0px auto;
         padding: 5px 20px;
         text-align: center;
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("{{ page.root_path }}/public/images/0000_white-background-purple3-1-800x812-q85.png");
-        width: 128px;
+        width: 100px;
         height: 140px;
         background-position: center;
         background-repeat: no-repeat;
@@ -89,236 +43,10 @@
         position: relative;
       }
 
-      .logo-text{
-        padding:0;
-        height:140px;
-        font-size: 44px;
-        padding-top: 50px;
-        padding-left: 140px;
-        color: #6C00B3;
-      }
 
-      .hero-image {
-        margin: 0px auto;
-        padding: 5px 20px;
-        text-align: left;
-        max-width: 820px;
-        width: 100%;
-        height: 20%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-      }
-
-      .hero-text {
-        text-align: center;
-        position: absolute;
-        color: white;
-        width: 100%;
-        bottom: 0;
-      }
-
-      .venue-image {
-        margin: 0px auto;
-        padding: 5px 20px;
-        text-align: left;
-        float: left;
-        margin-left: 0;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-      }
-
-      .itsday_title{
-        color: #6C00B3;
-        filter: grayscale(1);
-      }
-
-      .mobilespacing{
-        display: none;
-      }
-
-      button {
-        border: none;
-        border-radius: 12px;
-        outline: 0;
-        display: inline-block;
-        padding: 10px 25px;
-        color: white;
-        background-color: #6C00B3;
-        text-align: center;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #8933c2;
-        color: white;
-      }
-
-      button:disabled,
-      button[disabled]{
-        border: 1px solid #999999;
-        background-color: #cccccc;
-        color: #666666;
-        cursor: default;
-      }
-
-      .alert-box {
-        background-color: #fffbcc;
-        color: #444;
-        font-size: 14px;
-        line-height: 23px;
-        padding: 13px 16px;
-      }
-
-      .badge {
-        border-radius: 2px;
-        color: #000;
-        margin-left: 4px;
-        padding: 3px 5px 3px 4px;
-        position: relative;
-        text-transform: uppercase;
-      }
-
-      .center {
-        margin: auto;
-        width: 50%;
-        border: none;
-        padding: 10px;
-      }
-
-
-      .subheader{
-        display:flex;
-        flex-direction:row;
-        flex-wrap:wrap;
-        align-items:center;
-      }
-
-      .maincontent{
-        margin: 0px auto;
-        padding: 5px 20px;
-        text-align: left;
-        max-width: 820px;
-        background: white;
-      }
-
-      .opencall {
-        width: auto;
-      }
-
-      .opencall .col {
-        margin: 0px 0px 0px 20px;
-      }
-
-      .theme {
-        width: 60%;
-      }
-
-      .theme span {
-          padding: 0 10px;
-          float: none;
-      }
-
-      @media (max-width: 576px){
-        .hero-image {
-          padding: 0px;
-        }
-
-        .maincontent{
-          margin-bottom: 200px;
-        }
-
-        #share-buttons-container {
-          padding-bottom: 100px;
-        }
-
-
-        .mobilespacing{
-          display: block;
-        }
-
-        .reg {
-          float: left;
-          margin-top: 20px;
-        }
-
-        .venue-image{
-          padding: 0px;
-          width: 100%;
-        }
-
-        .eight {
-          width: 100%;
-        }
-
-        .opencall{
-          width: 100%;
-        }
-
-        .opencall .col{
-          float: none;
-          padding-top: 100px;
-          margin: auto;
-        }
-
-        .sch {
-          width: 100%;
-          margin: 0px 50px 0px 0px;
-        }
-
-        .theme span {
-          text-align: left;
-          float: left;
-        }
-      }
-
-      @media (max-width: 780px){
-        .hero-image {
-          padding: 0px;
-        }
-
-
-        .reg {
-          float: left;
-          margin-top: 20px;
-        }
-
-        .venue-image{
-          padding: 0px;
-          width: 95%;
-        }
-
-        .eight {
-          width: 100%;
-        }
-
-        .opencall{
-          width: 100%;
-        }
-
-        .opencall .col{
-          padding-top: 100px;
-        }
-
-        .sch {
-          width: 340px;
-        }
-
-        .theme {
-          width: 80%;
-        }
-
-        .theme span {
-          padding: 0 10px;
-          float: none;
-        }
-      }
     </style>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics >
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154148443-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -326,7 +54,7 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-154148443-1');
-    </script>
+    </script-->
 
   </head>
   <body>
@@ -336,15 +64,14 @@
         <hr>
 
         <a href="{{ page.root_path }}">
-            <div id="_logo_image" class="logo-image" style="margin-right: 45%;">
-            <div id="_logo_text" class="logo-text">Delhi</div>
+            <div id="_logo_image" class="logo-image" style="margin-right: 46.7%;">
+              <div id="_logo_text" class="logo-text">Delhi</div>
             </div>
         </a>
 
-
-      <!--div style="float: right;">
+      <div style="text-align: center; z-index: 1000;">
         {% include 'partials/navigation/navigation.html' %}
-      </div-->
+      </div>
     </div>
 
 
@@ -372,7 +99,6 @@
       <p>{{page.intro}}</p>
       <hr>
 
-
       <!-- EVENT + VENUE -->
       <hr class="dotted">
       <img class="venue-image col seven" src="{{ page.root_path }}/public/images/venue-info-bg.jpg"></img>
@@ -381,14 +107,13 @@
         <p style="font-size: 14px;">{{page.address}}</p>
         <h1 style="font-size:21px; margin-bottom: 4px;">Time</h1>
         <p style="font-size: 14px;">{{ page.date_time }}</p>
-        <p><a>Add to Calendar</a></p>
+        <p><a target="_blank" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Hi%20Feb%20-%20PCD%202020%20Event%20Day&dates=20200201T033000Z/20200202T123000Z&details=Get%20on%20the%20front%20page%20of%20HN,%20then%20prepare%20for%20world%20domination.&location=CSIR-Institute%20of%20Genomics%20&%20Integrative%20Biology%20(South%20Campus),%20Mathura%20Road,%20Opp:%20Sukhdev%20Vihar%20Bus%20Depot%20New%20Delhi%20110025.&sprop=&sprop=name:">Add to Calender</a></p>
         <h1 style="font-size:21px; margin-bottom: 4px;">How to reach</h1>
         <p style="font-size: 14px;">{{page.address_sub}}</p>
-        <p><a>View Map</a></p>
+        <p><a target="_blank" href="https://www.google.com/maps/place/CSIR-Institute+of+Genomics+and+Integrative+Biology/@28.553797,77.274461,19z/data=!4m5!3m4!1s0x390ce3ee732a3211:0xf4ec48384d22b20!8m2!3d28.5537973!4d77.2744605">View Map</a></p>
         <h1 style="font-size:21px; margin-bottom: 4px;">Things to bring</h1>
         <p style="font-size: 14px;">{{page.bring_these}}</p>
       </div>
-
 
       <!-- OPENCALL -->
       <a name="opencall"></a>
@@ -397,64 +122,55 @@
       <div class="opencall center">
         <div class="col three" style="text-align: center;">
           <a name="talks"></a>
-          <div class="center" style="width: 128px;height: 128px; -webkit-clip-path: url(#talks-clip-path); clip-path: url(#talks-clip-path);background: #6C00B3;"></div>
+          <div class="center" style="width: 128px;height: 128px; background-size: contain; background-image: url({{ page.root_path }}/public/images/PCD-WebArtboard-Talk.png);"></div>
           <svg class="svg" width="0" height="0">
             <clipPath id="talks-clip-path" clipPathUnits="objectBoundingBox">
               <path d="M0.5,0 L1,1 H0"></path>
             </clipPath>
           </svg>
-          <hr>
-          <hr>
           <h2>Talks</h2>
           <hr>
-          <hr>
-          <p>{{page.talks}}</p>
-          <div class="center">
+          <p style="min-height: 130px; padding: 10px;">{{page.talks}}</p>
+          <div>
             <a href="https://docs.google.com/forms/d/172l1Xve6g0kq75DK4QiIuhr0ou1UgXiHvyHkId1G5a0/viewform" target="_blank">
-            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-              <h2 style="width: 100px;">OPEN CALL</h2>
+            <button>
+              <h2 style="width: 100px;margin: 0;">Apply</h2>
             </button>
             </a>
           </div>
         </div>
         <div class="col three" style="text-align: center;">
           <a name="workshops"></a>
-          <div class="center"  style="width: 128px; height: 128px; background: #6C00B3;"></div>
+          <div class="center"  style="width: 128px; height: 128px; background-size: contain; background-image: url({{ page.root_path }}/public/images/PCD-WebArtboard-Workshop.png);"></div>
           <svg class="svg" width="0" height="0">
           </svg>
-          <hr>
-          <hr>
           <h2>Workshops</h2>
           <hr>
-          <hr>
-          <p>{{page.workshops}}</p>
-          <div class="center">
+          <p style="min-height: 130px; padding: 10px;">{{page.workshops}}</p>
+          <div>
             <a href="https://docs.google.com/forms/d/1gO_Hgzxz0Cbp_7QDdirPtqLlKmrX1F3NvXCosKnlDKU/viewform" target="_blank">
-            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-              <h2 style="width: 100px;">OPEN CALL</h2>
+            <button>
+              <h2 style="width: 100px;margin: 0;">Apply</h2>
             </button>
             </a>
           </div>
         </div>
         <div class="col three" style="text-align: center;">
           <a name="showcase"></a>
-          <div class="center"  style="width: 128px; height: 128px; -webkit-clip-path: url(#showcase-clip-path); clip-path: url(#showcase-clip-path); background: #6C00B3;"></div>
+          <div class="center"  style="width: 128px; height: 128px; background-size: contain; background-image: url({{ page.root_path }}/public/images/PCD-WebArtboard-Showcase.png);"></div>
           <svg class="svg" width="0" height="0">
             <clipPath id="showcase-clip-path" clipPathUnits="objectBoundingBox">
               <path d="M0.5,0.5 m-0.5,0 a0.5,0.5,0,1,0,1,0 a0.5,0.5,0,1,0,-1,0"></path>
             </clipPath>
           </svg>
 
-          <hr>
-          <hr>
           <h2>Showcase</h2>
           <hr>
-          <hr>
-          <p>{{page.showcase}}</p>
-          <div class="center">
+          <p style="min-height: 130px; padding: 10px;">{{page.showcase}}</p>
+          <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeROo7WArxJJ_euqQ5JupN3vga_vzkQb72szqCjbot3DG7Bzw/viewform" target="_blank">
-            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-              <h2 style="width: 100px;">OPEN CALL</h2>
+            <button>
+              <h2 style="width: 100px;margin: 0;">Apply</h2>
             </button>
             </a>
           </div>
@@ -472,7 +188,7 @@
         <a href="https://forms.gle/k8GQmiWVwKHSiGee7" target="_blank">
           <div class="center" style="text-align:center;">
             <button>
-              <h2>Register</h2>
+              <h2 style="margin: 0;">Register</h2>
             </button>
             <hr style="margin-bottom: 10px;">
             <p style="font-size: 12px;">Early bird free registrations are open now!</p>
